--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "axios": "^1.11.0",
     "daisyui": "^5.0.50",
     "next": "15.5.0",
     "react": "19.1.0",
